--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </style>
   </head>
   <body>
-    <audio id="bgm" src="/public/bgm.mp3" autoplay></audio>
+    <audio id="bgm" src="/bgm.mp3" autoplay></audio>
 
     <script src="/live2dcubismcore.min.js"></script>
     <script type="module" src="/src/main.js"></script>
@@ -62,7 +62,7 @@
     <script>
       let audio = document.getElementById("bgm");
       audio.loop = true;
-
+      audio.volume = 0.5;
       document.addEventListener(
         "click",
         () => {
